{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 48,
  "lineage": "13cfe791-42ca-b7f8-8da9-8d231ef15e1b",
  "resources": [
    {
      "module": "module.linuxservers",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "bdickerson1-sample-server",
            "fqdn": "bdickerson1-sample-server.eastus.cloudapp.azure.com",
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/publicIPAddresses/BEN-VM-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.96.46.187",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "BEN-VM-pip-0",
            "resource_group_name": "2021-fall-bdickerson1-rg",
            "sku": "Basic",
            "tags": {
              "source": "terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/networkInterfaces/BEN-VM-nic-0",
            "internal_domain_name_suffix": "tnfubdrhrunexohaydwcuqpq2e.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "BEN-VM-ip-0",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/publicIPAddresses/BEN-VM-pip-0",
                "subnet_id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "BEN-VM-nic-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "2021-fall-bdickerson1-rg",
            "tags": {
              "source": "terraform"
            }
          },
          "dependencies": [
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/networkInterfaces/BEN-VM-nic-0|/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/networkSecurityGroups/BEN-VM-nsg",
            "network_interface_id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/networkInterfaces/BEN-VM-nic-0",
            "network_security_group_id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/networkSecurityGroups/BEN-VM-nsg"
          },
          "dependencies": [
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/networkSecurityGroups/BEN-VM-nsg",
            "location": "eastus",
            "name": "BEN-VM-nsg",
            "resource_group_name": "2021-fall-bdickerson1-rg",
            "security_rule": [],
            "tags": {
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow remote protocol in from all locations",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/networkSecurityGroups/BEN-VM-nsg/securityRules/allow_remote_22_in_all",
            "name": "allow_remote_22_in_all",
            "network_security_group_name": "BEN-VM-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "2021-fall-bdickerson1-rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "bdickerson1-sample-server",
            "fqdn": "bdickerson1-sample-server.eastus.cloudapp.azure.com",
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/publicIPAddresses/BEN-VM-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "BEN-VM-pip-0",
            "resource_group_name": "2021-fall-bdickerson1-rg",
            "sku": "Basic",
            "tags": {
              "source": "terraform"
            }
          },
          "dependencies": [
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "2021-fall-bdickerson1-rg",
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "8e404b9b-8d27-4b1a-b8e0-c0ec2a41f0e4",
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/2021-fall-bdickerson1-rg/providers/Microsoft.Network/virtualNetworks/acctvnet",
            "location": "eastus",
            "name": "acctvnet",
            "resource_group_name": "2021-fall-bdickerson1-rg",
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    }
  ]
}